--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "contributes": {
         "commands": [{
             "command": "extension.jgInsertTag",
-            "title": "JG Insert Tag"
+            "title": "jgInsertTag"
         }],
         "configuration": {
             "title": "jgInsertTag Configuration",
